--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
+        <repository>
+            <id>gravity-repo</id>
+            <url>http://repo.gravitydevelopment.net</url>
+        </repository>
     </repositories>
 
     <dependencies>        
@@ -47,10 +51,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>de.zh32</groupId>
-            <artifactId>TeleportSigns</artifactId>
-            <version>1.3.2</version>
-            <scope>compile</scope>
+            <groupId>net.gravitydevelopment.updater</groupId>
+            <artifactId>updater</artifactId>
+            <version>2.1</version>
         </dependency>
     </dependencies>
     
@@ -86,6 +89,7 @@
                             <minimizeJar>true</minimizeJar>    
                             <artifactSet>
                                 <includes>
+                                    <include>net.gravitydevelopment.*:*</include>
                                     <include>org.mcstats.*:*</include>
                                 </includes>
                             </artifactSet>
