Null check name in conversion to UUIDs, Fix updater shading, Make sure all statements are closed

--- a/pom.xml
+++ b/pom.xml
@@ -86,10 +86,10 @@
                             <goal>shade</goal>
                         </goals>                        
                         <configuration>
-                            <minimizeJar>true</minimizeJar>    
+                            <minimizeJar>true</minimizeJar>
                             <artifactSet>
                                 <includes>
-                                    <include>net.gravitydevelopment.*:*</include>
+                                    <include>net.gravitydevelopment.updater:*</include>
                                     <include>org.mcstats.*:*</include>
                                 </includes>
                             </artifactSet>
