Rename ServerID to GroupID for the sake of understanding, More cleanup

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,4 @@
-update-events:
-  - quit
-serverID: 'MyServer'
+groupID: 'MyServer'
 database:
   url: 'jdbc:mysql://localhost:3306/mydb?user=root&password=asdf'
   handler: 'tk.manf.InventorySQL.database.handler.MySQLDatabaseHandler'
