Cleanup, Remove some startup errors, Make setup require changing a boolean, Make disabling work right,

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 groupID: 'MyServer'
 database:
+  enabled: false
   url: 'jdbc:mysql://localhost:3306/mydb?user=root&password=asdf'
   handler: 'tk.manf.InventorySQL.database.handler.MySQLDatabaseHandler'
 data:
